# filesystem

./: .cirrus.yml  .travis.yml  CMakeLists.txt  README.md  appveyor.yml  build.jam  change_to_v2.bat  change_to_v2.sh  change_to_v3.bat  change_to_v3.sh  design.htm  dual_versions.html  index.htm  index.html  version.bat  version.sh
.github/workflows/: ci.yml
bug/: Jamfile.v2  bug.cpp
config/: Jamfile.v2  has_bcrypt.cpp
doc/: .gitignore  Jamfile.v2  acknowledgements.qbk  cautions.qbk  changelog.qbk  convenience.htm  decomposition.html  deprecated.html  deprecated.qbk  design.htm  design.qbk  do-list.htm  do_list.html  exception.htm  faq.htm  faq.qbk  filesystem.qbk  fstream.htm  i18n.html  index.htm  install.qbk  intro.qbk  issue_reporting.html  issue_reporting.qbk  operations.htm  path.htm  pathname_grammar.html  portability_guide.htm  portability_guide.qbk  publish.bat  reference-full.qbk  reference.html  reference.qbk  relative_proposal.html  relative_proposal.qbk  release_history.html  styles.css  tickets.html  tr2_proposal.html  tutorial.html  (+8 more)
doc/src/: boost_snippets.html  build.bat  source.html  tr2_snippets.html
example/: Jamfile  Jamfile.v2  compiler_status.cpp  compiler_status_log.cpp  file_size.cpp  file_status.cpp  jam_regr_html.cpp  mbcopy.cpp  mbpath.cpp  mbpath.hpp  p0317_example.cpp  path_info.cpp  path_table.cpp  probe_valid_names.cpp  process_jam_log.cpp  readme.txt  recursive_ls.cpp  regr_report.bat  simple_ls.cpp  tut0.cpp  tut1.cpp  tut2.cpp  tut3.cpp  tut4.cpp  tut5.cpp  vc++.bat
example/msvc/: common.props
example/msvc/tut3/: tut3.vcxproj
example/msvc/tut4/: tut4.vcxproj
example/test/: Jamfile.v2  bld.bat  bld.sh
include/boost/: delimit_string.hpp  filesystem.hpp
include/boost/filesystem/: attributes.hpp  cache.hpp  cerrno.hpp  config.hpp  config_info.hpp  convenience.hpp  directory.hpp  exception.hpp  file_status.hpp  filesystem.hpp  fstream.hpp  operations.hpp  path.hpp  path_traits.hpp  recursive_directory_iterator.hpp  string_file.hpp
meta/: libraries.json
src/: CMakeLists.txt  atomic.hpp  atomic_tools.hpp  attributes.cpp  cache.cpp  codecvt_error_category.cpp  convenience.cpp  directory.cpp  directory_posix.cpp  directory_windows.cpp  error_handling.hpp  exception.cpp  linux_statx.hpp  operations.cpp  operations_posix_windows.cpp  path.cpp  path_posix_windows.cpp  path_traits.cpp  platform_config.hpp  portability.cpp  posix_tools.hpp  private_config.hpp  unique_path.cpp  utf8_codecvt_facet.cpp  utf8_codecvt_facet.hpp  windows_file_codecvt.cpp  windows_file_codecvt.hpp  windows_tools.hpp
test/: CMakeLists.txt  Jamfile  Jamfile.v2  attr_test.cpp  chown_test.cpp  commit_test.cpp  config_info.cpp  convenience_test.cpp  copy_test.cpp  cstdio_test.cpp  default_name_check_test.cpp  deprecated_test.cpp  equivalent.cpp  filesystem_directory_test.cpp  fstream_test.cpp  large_file_support_test.cpp  locale_info.cpp  locale_multithread_test.cpp  long_path_test.cpp  lpath.hpp  odr1_test.cpp  odr2_test.cpp  operations_test.cpp  operations_unit_test.cpp  path_generation_test.cpp  path_test.cpp  path_times.cpp  path_unit_test.cpp  recursive_dir_itr_test.cpp  relative_test.cpp  test_codecvt.hpp  test_links.html  test_status.html  type_pm_test.cpp  wide_test.cpp  windows_attributes.cpp
test/auto-link-test/: Jamfile
test/boost_filesystem_msvc/filesystem_dll/: filesystem_dll.vcproj
test/boost_filesystem_msvc/fstream_test/: fstream_test.vcproj
test/boost_filesystem_msvc/wide_test/: wide_test.vcproj
test/issues/: 13024-1.cpp  13024-2.cpp  179.cpp  6638-global-init-fails-3.cpp  99_canonical_with_junction_point.cpp  Jamfile.v2  fchmodat_AT_SYMLINK_NOFOLLOW_6659.cpp  hello_filesystem.cpp  recurse_dir_iter_5403.cpp  reparce_tag_file_placeholder.cpp  reparse_tag_file_placeholder.cpp
test/issues/3332/: test.cpp
test/msvc/: boost_filesystem.sln  common.props  common.vsprops  filesystem.sln
test/msvc/config_info/: config_info.vcxproj
test/msvc/convenience_test/: convenience_test.vcproj  convenience_test.vcxproj
test/msvc/deprecated_test/: deprecated_test.vcproj  deprecated_test.vcxproj
test/msvc/file_status/: file_status.vcxproj
test/msvc/filesystem_dll/: filesystem_dll.vcproj  filesystem_dll.vcxproj
test/msvc/filesystem_lib/: filesystem_lib.vcxproj
test/msvc/fstream_test/: fstream_test.vcproj  fstream_test.vcxproj
test/msvc/header_inclusion/: header_inclusion.vcxproj
test/msvc/headers/: headers.vcxproj
test/msvc/hello_filesystem/: hello_filesystem.vcxproj
test/msvc/hello_filesystem_static/: hello_filesystem_static.vcxproj
test/msvc/issue_test/: issue_test.vcxproj
test/msvc/issues_test_static/: issues_test_static.vcxproj
test/msvc/large_file_support_test/: large_file_support_test.vcproj
test/msvc/locale_info/: locale_info.vcxproj
test/msvc/long_path_test/: long_path_test.vcxproj
test/msvc10/: filesystem-v3.sln
tools/: exclude.txt
v2/doc/: design.htm  do-list.htm  faq.htm  index.htm  portability_guide.htm  reference.html
v2/example/: mbcopy.cpp  mbpath.cpp
v2/src/: v2_operations.cpp  v2_path.cpp  v2_portability.cpp  v2_utf8_codecvt_facet.cpp  v2_utf8_codecvt_facet.hpp
v2/test/: convenience_test.cpp  deprecated_test.cpp  fstream_test.cpp  large_file_support_test.cpp  operations_test.cpp  path_test.cpp  wide_test.cpp
v3/boost/: filesystem.hpp
v3/doc/: deprecated.html  design.htm  do_list.html  faq.htm  index.htm  path_table.cpp  portability_guide.htm  reference.html  release_history.html  tutorial.html  v3.html  v3_design.html
v3/example/: Jamfile.v2  file_status.cpp  simple_ls.cpp
v3/src/: codecvt_error_category.cpp  operations.cpp  path.cpp  path_traits.cpp  portability.cpp  unique_path.cpp  utf8_codecvt_facet.cpp  utf8_codecvt_facet.hpp  windows_file_codecvt.cpp  windows_file_codecvt.hpp
v3/test/: Jamfile.v2  convenience_test.cpp  delim_string_test.cpp  deprecated_test.cpp  fstream_test.cpp  large_file_support_test.cpp  locale_info.cpp  operations_test.cpp  operations_unit_test.cpp  path_test.cpp  path_unit_test.cpp  quote_string_test.cpp  test_codecvt.hpp  windows_attributes.cpp
(+110 files in other folders)
